--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:label="Maze"
         android:allowBackup="false"
         android:supportsRtl="true"
+        android:icon="@drawable/ic_app"
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
